--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,8 @@
     <string name="select_halium_boot">Please select halium boot file</string>
     <string name="select_system_image">Please select systemimage</string>
     <string name="selected">File selected.</string>
-    <string name="enter_rom_name">Enter ROM name</string>
+    <string name="enter_rom_name">Please enter the ROM name for displaying in menu. You may choose freely.</string>
+    <string name="enter_rom_folder">Please enter the ROM directory name. It may not already exist. If in doubt, keep the default.</string>
     <string name="install_ut_halium_boot_systemimage_rootfs">You are going to install ubuntu touch, using system image, rootfs and halium boot. Are you sure?</string>
     <string name="select_rootfs">Please select rootfs</string>
     <string name="install_sailfish">You are going to install SailfishOS, using zip. Are you sure?</string>
