--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,51 +15,26 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
-    <string name="select_droidboot_title">Select DroidBoot</string>
     <string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
     <string name="select_droidboot_ok">DroidBoot is selected.</string>
     <string name="select_droidboot_unzip">This looks like a zip file. You need to extract lk.img!</string>
     <string name="select_droidboot_invalid">That does not look like an DroidBoot!</string>
     <string name="sure_title">Are you sure?</string>
-    <string name="install_finish_msg">Return code is %1$sWhen the Return Code is ERROR, something went wrong. Please flash the uninstaller and ask in our Telegram group @andbootmgr. Don\'t forget the log file at /sdcard/abm/install.log! If the Return Code is OK, the installation was successful. You should reboot now.</string>
-    <string name="root">I am root. Fine! :)</string>
-    <string name="no_root">I am NOT root. Something went wrong!</string>
-    <string name="test_root">Test Root</string>
-    <string name="readme_title">README, Source and Licence</string>
-    <string name="readme_text">The source is available here: %1$s\nThe README is available here: %2$s</string>
     <string name="install">Install</string>
-    <string name="readme">README</string>
-    <string name="nodevcheck">Disable device check (if you spoof fingerprint)</string>
-    <string name="allow_install">I accept the risk, allow installation!</string>
-    <string name="not_installed">Android Boot Manager is not installed on your device!</string>
-    <string name="devices">It is only available for the Moto G5 (cedric) and for the Volla Phone (yggdrasil)!</string>
     <string name="be_careful">YOU CAN LOOSE YOUR DATA! YOU CAN BRICK YOUR DEVICE! YOU CAN LOOSE YOUR IMEI! YOU CAN LOOSE YOUR MONEY! NOBODY IS RESPONSIBLE EXCEPT YOU! DO AT YOUR OWN RISK AND BE CAREFUL!</string>
-    <string name="configurator">Configurator</string>
-    <string name="mount">Mount Bootset</string>
     <string name="umount">Unmount Bootset</string>
-    <string name="open_configurator">Mount if necessary and open Configurator</string>
-    <string name="roms">ROMs</string>
-    <string name="entries">Entries</string>
-    <string name="general">General</string>
     <string name="timeout">Timeout</string>
     <string name="default_entry">Default Entry</string>
     <string name="save">Save</string>
     <string name="edit_entry">Edit Entry</string>
-    <string name="entry_create">Create new…</string>
     <string name="title">Title</string>
     <string name="kernel">Kernel</string>
     <string name="dtb">DTB</string>
     <string name="initrd">Initrd</string>
     <string name="cmdline">Cmdline</string>
-    <string name="format">Format</string>
-    <string name="format_msg">ATTENTION: If you now click OK, all data on that SD card will be LOST</string>
-    <string name="unsupported_os">This operating system installer is unsupported.</string>
-    <string name="storage_in_use">The storage is currently in use. Often does Android auto-mounting or your SD card is formatted as Internal Storage. Please make sure it is not used (mounted or even modified)</string>
-    <string name="no_storage_found">No storage device with ABM metadata was found but you need one for this. If you have one, press "Format". If there is no "Format" button there was no compatible storage found.</string>
     <string name="delete">Delete</string>
     <string name="delete_msg">This will delete partition %1$d of type %2$s labeled \'%3$s\'</string>
     <string name="delete_msg_2">This will delete the configuration file of the ROM %1$s. You need to delete the partitions on the SD card manually to prevent data loss.</string>
-    <string name="filename">Config file name (No spaces, no file extension)</string>
     <string name="add_rom">Add ROM</string>
     <string name="other_os">Other OS (boot.img) (Advanced users only!)</string>
     <string name="empty_entry">Empty Entry file (Advanced users only!)</string>
@@ -68,34 +43,22 @@
     <string name="convert_prog">Converting…</string>
     <string name="creating_prog">Creating…</string>
     <string name="renaming_prog">Renaming…</string>
-    <string name="rom_location">ROM location</string>
     <string name="delete_real_rom">You cannot delete your primary ROM!</string>
     <string name="rename">Rename</string>
-    <string name="app_unfinished">Android Boot Manager is installed successfully but the app is not yet finished; blank pages and buttons that do nothing are excepted :(</string>
-    <string name="rom_type_add_rom_zip">Android (ROM zip)</string>
     <string name="updatelk">Update DroidBoot</string>
-    <string name="updated">I updated my main ROM</string>
-    <string name="rom_type_add_ut_sysimg_halium_rootfs">Ubuntu Touch (System image, Halium Boot image, Rootfs)</string>
     <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
-    <string name="install_ut_halium_boot_systemimage">You are going to install ubuntu touch, using system image and halium boot. Are you sure?</string>
     <string name="select_halium_boot">Please select the halium boot image</string>
+    <string name="select_hybris_boot">Please select the hybris boot image</string>
     <string name="select_boot">Please select the boot image</string>
     <string name="select_system_image">Please select the system image</string>
     <string name="selected">File selected.</string>
     <string name="enter_rom_name">Please enter the ROM name for displaying in menu. You may choose freely.</string>
     <string name="enter_rom_folder">Please enter the ROM directory name. It may not already exist. If in doubt, keep the default.</string>
-    <string name="install_ut_halium_boot_systemimage_rootfs">You are going to install ubuntu touch, using system image, rootfs and halium boot. Are you sure?</string>
-    <string name="select_rootfs">Please select rootfs</string>
-    <string name="install_sailfish">You are going to install SailfishOS, using zip. Are you sure?</string>
-    <string name="select_sfos_zip">Please select SailfishOS zip</string>
     <string name="rom_type_add_sailfish">Sailfish OS</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">@string/app_name</string>
     <string name="nav_header_subtitle">One phone to start them all!</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
     <string name="menu_home">Home</string>
     <string name="menu_roms">ROMs</string>
     <string name="menu_sd">SD card</string>
@@ -103,13 +66,9 @@
     <string name="wizard_updatelk_intro">You are about to update the bootloader.</string>
     <string name="wizard_addrom_intro">You are about to install an ROM to the SD card.</string>
     <string name="aboutLibraries">About Libraries</string>
-    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
-    <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
-    <string name="aboutLibraries_description_text" translatable="false">@string/nav_header_subtitle</string>
-    <string name="home_installedWorking_img">Checkmark/Cross to represent installed state</string>
-    <string name="home_installedWorking_text">Failed to load state</string>
-    <string name="home_installedWorking_ok">Installed &amp; working</string>
-    <string name="home_installedWorking_no">Not installed</string>
+    <string name="aboutLibraries_description_showIcon" translatable="false" tools:keep="@string/aboutLibraries_description_showIcon">true</string>
+    <string name="aboutLibraries_description_showVersion" translatable="false" tools:keep="@string/aboutLibraries_description_showVersion">true</string>
+    <string name="aboutLibraries_description_text" translatable="false" tools:keep="@string/aboutLibraries_description_text">@string/nav_header_subtitle</string>
     <string name="loading">Loading…</string>
     <string name="installcheck1">Install check #1:</string>
     <string name="installcheck2">Install check #2:</string>
