--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -95,6 +95,7 @@
     <string name="create">Create</string>
     <string name="backup">Backup</string>
     <string name="restore">Restore</string>
+    <string name="restoresparse">Przywróć Sparse</string>
     <string name="backup_msg">Welcome to the simple Backup &amp; Restore tool. What do you want to do with this partition?</string>
     <string name="copy_file">Copying file…</string>
     <string name="sector_range">Sector range</string>
@@ -110,6 +111,9 @@
     <string name="data_part">OS User data</string>
     <string name="data">Data</string>
     <string name="system">System</string>
+    <string name="update_real_rom">You cannot update your real ROM via ABM!</string>
+    <string name="kernel_update">Kernel Update</string>
+    <string name="kernel_update_msg">You are about to update the kernel/boot image of the selected ROM and regenerate it\'s config.</string>
     <string name="select_part">Please select an unused partition on your SD card configured with the following type: %1$s. Please make sure it really is the correct one, you can cancel and label it if unsure. If you didn\'t create one yet, do that first.</string>
     <!-- How an partition is used -->
     <string name="usage">Użycie</string>
