--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
 	<string name="aboutLibraries_description_showIcon" translatable="false" tools:keep="@string/aboutLibraries_description_showIcon">true</string>
 	<string name="aboutLibraries_description_showVersion" translatable="false" tools:keep="@string/aboutLibraries_description_showVersion">true</string>
 	<string name="aboutLibraries_description_text" translatable="false" tools:keep="@string/aboutLibraries_description_text">@string/nav_header_subtitle</string>
-	<string name="backup_msg">Welcome to the simple Backup &amp; Restore tool. What do you want to do with this partition?</string>
+	<string name="backup_msg">Welcome to the simple Backup &amp; Restore tool. What do you want to do with this partition %1$s?</string>
 	<string name="menu">Menu</string>
 </resources>
