--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,169 @@
 	<string name="aboutLibraries_description_text" translatable="false" tools:keep="@string/aboutLibraries_description_text">@string/nav_header_subtitle</string>
 	<string name="backup_msg">Welcome to the simple Backup &amp; Restore tool. What do you want to do with this partition %1$s?</string>
 	<string name="menu">Menu</string>
+	<string name="backup">Backup</string>
+	<string name="restore">Restore</string>
+	<string name="flash_sparse">Flash sparse image</string>
+	<string name="successfully_selected">Successfully selected.</string>
+	<string name="next">Next</string>
+	<string name="make_backup">Create backup file</string>
+	<string name="restore_backup">Select file to restore</string>
+	<string name="restore_backup_sparse">Select sparse file to write to the partition</string>
+	<string name="choose_file">Choose file</string>
+	<string name="create_file">Create file</string>
+	<string name="finish">Finish</string>
+	<string name="cancel">Cancel</string>
+	<string name="prev">Prev</string>
+	<string name="general_settings">General settings</string>
+	<string name="start_sector">Start sector (relative)</string>
+	<string name="end_sector">End sector (relative)</string>
+	<string name="available_space">Available space: %s (%d sectors)</string>
+	<string name="approx_size">Approximate size: %s</string>
+	<string name="invalid_input">(invalid input)</string>
+	<string name="option_select">Please select one of the below options.</string>
+	<string name="portable_part">Portable data partition</string>
+	<string name="part_name">Partition name</string>
+	<string name="create">Create</string>
+	<string name="install_os">Install OS</string>
+	<string name="cont">Continue</string>
+	<string name="icon_content_desc">Icon</string>
+	<string name="select_os">Please select the operating system you wish to install.</string>
+	<string name="os_logo_content_desc">OS logo</string>
+	<string name="rom_logo_content_desc">ROM logo</string>
+	<string name="almost_installed_rom">You almost installed this ROM! There\'s only a few more steps to go. Below, you have some optional settings to further customize your install…</string>
+	<string name="bl_option">Bootloader options</string>
+	<string name="close_content_desc">Close</string>
+	<string name="expand_content_desc">Expand</string>
+	<string name="internal_id">ROM internal ID (don\'t touch if unsure)</string>
+	<string name="name_in_boot">ROM name in bootmenu</string>
+	<string name="part_layout">Partition layout (advanced users)</string>
+	<string name="os_userdata">OS userdata</string>
+	<string name="os_system">OS system data</string>
+	<string name="sector_used">Selected value: %d %s (using %d from %d sectors)</string>
+	<string name="size">Size</string>
+	<string name="type">Type</string>
+	<string name="id">ID</string>
+	<string name="sparse">Sparsed</string>
+	<string name="remaining_sector">Remaining %d from %d</string>
+	<string name="install">Install</string>
+	<string name="connecting_text">(Connecting…)</string>
+	<string name="downloading">Downloading…</string>
+	<string name="provide_images">Please now provide images for all required IDs. You can use the recommended ones using the \"Download\" button!</string>
+	<string name="user_selected">User-selected</string>
+	<string name="undo">Undo</string>
+	<string name="download_progress">%s of %s downloaded</string>
+	<string name="download">Download</string>
+	<string name="choose">Choose</string>
+	<string name="welcome_text">Welcome to ABM!</string>
+	<string name="install_abm">This will install ABM</string>
+	<string name="install_abm_dboot">This will install ABM + DroidBoot</string>
+	<string name="sd_erase1">WARNING: Your SD card will be fully erased.</string>
+	<string name="sd_erase2">Please make sure you have an backup!</string>
+	<string name="android">Android</string>
+	<string name="enter_name_for_current">Please enter an name for the currently running operating system. You may choose as you wish.</string>
+	<string name="os_name">OS name</string>
+	<string name="invalid_in">Invalid input</string>
+	<string name="droidboot_icon_content_desc">DroidBoot Icon</string>
+	<string name="choose_droidboot">Please choose a DroidBoot image!</string>
+	<string name="reinstall_dboot">This will reinstall DroidBoot</string>
+	<string name="file_unavailable">File not available, please try again later!</string>
+	<string name="internal_file_error1">Internal error - no file handler added!! Please cancel install</string>
+	<string name="internal_file_error2">Internal error - double file choose!! Please cancel install</string>
+	<string name="local_update">Local update</string>
+	<string name="online_update">Online update</string>
+	<string name="update_check_failed">Failed to check for updates! Please try again later.</string>
+	<string name="found_update">"An update is available for installation.\n\n
+
+		Continuing this process will download image data over the internet, which may use over 4 gigabytes of data. Please make sure you are on an unmetered connection.\n
+		Please make sure you have an backup of your data before continuing.\n
+		While the update process is automatic, please do not exit the app while the update is in progress.\n</string>
+	<string name="install_update">Install update</string>
+	<string name="up2date">No updates are currently available, your operating system is up to date!</string>
+	<string name="local_updater_1">Welcome to the local updater.</string>
+	<string name="local_updater_2">This allows you to manually update the boot image of an operating system.</string>
+	<string name="local_updater_3">Please only continue if you know what you are doing.</string>
+	<string name="script_name">Script name</string>
+	<string name="no_file_selected">No file selected</string>
+	<string name="file_selected">File selected</string>
+	<string name="update_droidboot_text">This will update DroidBoot</string>
+	<string name="toolkit_extracting">Toolkit extracting, please be patient…</string>
+	<string name="toolkit_error">Toolkit unpacking has not successfully completed. Please report this to the developers!</string>
+	<string name="quit">Quit</string>
+	<string name="add_icon_content_desc">Add icon</string>
+	<string name="home">Home</string>
+	<string name="settings">Settings</string>
+	<string name="select_free_space">Select free space to begin adding an operating system or an portable partition at the selected position.</string>
+	<string name="ok">OK</string>
+	<string name="installed">Installed</string>
+	<string name="installed_deactivated">Installed but not activated</string>
+	<string name="deactivated_corrupt">Deactivated and corrupt</string>
+	<string name="activated_corrupt">Activated but corrupt</string>
+	<string name="not_installed">Not installed</string>
+	<string name="yes">Yes</string>
+	<string name="no">No</string>
+	<string name="activated">Activated: %s</string>
+	<string name="mounted_b">Mounted bootset: %s</string>
+	<string name="sd_inserted">SD Card inserted: %s</string>
+	<string name="sd_formatted">SD Card formatted for dualboot: %s</string>
+	<string name="installed_status">Installed: %s</string>
+	<string name="corrupt_b">Bootset corrupt: %s</string>
+	<string name="device">Device: %s</string>
+	<string name="unsupported">(unsupported)</string>
+	<string name="need_root">Root access is not granted, but required for this app.</string>
+	<string name="need_sd">An SD card is required for ABM to work, but none could be detected.</string>
+	<string name="installed_not_booted">The device did not boot using DroidBoot, but configuration files are present. If you just installed ABM, you need to reboot. If the bootloader installation repeatedly fails, please consult the documentation.</string>
+	<string name="missing_cfg">Configuration files are not present. For more information, please consult the documentation.</string>
+	<string name="cannot_mount">Bootset could not be mounted, please consult the documentation.</string>
+	<string name="invalid">Unknown error, invalid state</string>
+	<string name="unified">Unified</string>
+	<string name="partitions">Partitions</string>
+	<string name="enabled_content_desc">Enabled</string>
+	<string name="entries">Entries</string>
+	<string name="part_wizard_err">Partition wizard failed to load</string>
+	<string name="click2inspect">Click one of the below options to inspect them.</string>
+	<string name="invalid_entry">(Invalid entry)</string>
+	<string name="invalid_entry2">Invalid entry</string>
+	<string name="entry_title">Entry \"%s\"</string>
+	<string name="free_space_item">Free space (%s)</string>
+	<string name="part_item">Partition %d \"%s\"</string>
+	<string name="new_entry">(Create new entry)</string>
+	<string name="new_entry2">New entry</string>
+	<string name="free_space">Free space</string>
+	<string name="part_title">Partition %d</string>
+	<string name="unknown">Unknown</string>
+	<string name="adoptable_meta">Adoptable Storage Metadata</string>
+	<string name="reserved">Reserved</string>
+	<string name="rename">Rename</string>
+	<string name="delete">Delete</string>
+	<string name="mount">Mount</string>
+	<string name="umount">Unmount</string>
+	<string name="detail_id">Id: %d (%d:%d)</string>
+	<string name="detail_type">Type: %s %s</string>
+	<string name="detail_type_code">(code %s)</string>
+	<string name="detail_size">Size: %s %s</string>
+	<string name="detail_size_sectors">(%d sectors)</string>
+	<string name="detail_position">Position: %d -> %d</string>
+	<string name="backupnrestore">Backup &amp; Restore</string>
+	<string name="really_delete_part">Do you REALLY want to delete this partition and loose ALL data on it?</string>
+	<string name="file_name">File name</string>
+	<string name="title">Title</string>
+	<string name="linux">Linux</string>
+	<string name="initrd">Initrd</string>
+	<string name="dtb">Dtb</string>
+	<string name="options">Options</string>
+	<string name="rom_type">ROM type</string>
+	<string name="assigned_parts">Assigned partitions</string>
+	<string name="updater_url">Updater URL</string>
+	<string name="file_already_exists">File already exists, choose a different name</string>
+	<string name="update">Update</string>
+	<string name="really_delete_os">Do you REALLY want to delete this operating system and loose ALL it\'s data?</string>
+	<string name="please_wait">Please wait…</string>
+	<string name="loading">Loading…</string>
+	<string name="done">Done</string>
+	<string name="default_entry">Default entry</string>
+	<string name="timeout_secs">Timeout (seconds)</string>
+	<string name="failed2save">Failed to save changes...</string>
+	<string name="save_changes">Save changes</string>
+	<string name="update_droidboot">Update DroidBoot</string>
+	<string name="noob_mode">Simplified mode</string>
 </resources>
